# Agentic_Workflows

./: .gitignore  emails.db  main.py  pyproject.toml
.ipynb_checkpoints/: M2_UGL_1-checkpoint.ipynb
Email_tool/: M3_UGL_2.ipynb
Email_tool/email_server/templates/: ui_all.html
Email_tool/email_server/templates/ui_all_files/: ui_all.html
Market_Research_Team/: M5_UGL_2.ipynb
Personal Productivity Agent/: assignment_2.md  productivity_agent.ipynb  tasks.json
Personal_finance/: finance.ipynb  personal_finance.db
Personal_finance/utils/: db_seed.py  utils.py
SQL_Generation/: M2_UGL_2.ipynb  README.md  products.db
chart_generation/: M2_UGL_1.ipynb
component_level_eval/: M4_UGL_1.ipynb  assignment.ipynb  assignment.md
customer_service_agent/: M5_UGL_1.ipynb  M5_UGL_1_R.ipynb  store_db.json  table_creation.ipynb
family_locator/: locations.db  main.py  pyproject.toml
family_locator/templates/: dashboard.html
gmail_agent/: gmail_agent.ipynb  readme.md
library_book_lending_agent/: Library_agent.ipynb  assignment_library_agent.md  data_seed.py  library_database.db  utils.py
module_lab_5_assignment/: C1M5_Assignment.ipynb  research_tools.ipynb  unittests.ipynb
tool_calling/: M3_UGL_1.ipynb
