[project]
name = "agentic-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aisuite==0.1.11",
    "anthropic>=0.109.2",
    "docstring-parser>=0.18.0",
    "duckdb>=1.5.3",
    "fastapi>=0.137.1",
    "ipywidgets>=8.1.8",
    "jinja2>=3.1.6",
    "jupyter-server>=2.19.0",
    "markdown>=3.10.2",
    "matplotlib>=3.11.0",
    "mistralai>=1.5.2",
    "nbclassic>=1.3.3",
    "notebook>=7.5.7",
    "openai>=2.42.0",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pydantic[email]>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "qrcode>=8.2",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.51",
    "tabulate>=0.10.0",
    "tavily-python>=0.7.12",
    "textstat>=0.7.13",
    "tinydb>=4.8.2",
    "uvicorn>=0.49.0",
    "vertexai>=1.71.1",
    "wikipedia>=1.4.0",
]
